--- a/templates/access-manager/0/docker-compose.yml
+++ b/templates/access-manager/0/docker-compose.yml
@@ -23,25 +23,25 @@ services:
   api:
     image: ${IMAGE}:${IMAGE_TAG}
     secrets:
-      - ${MYSQL_ACCESS_MANAGER_USER}
-      - ${MYSQL_ACCESS_MANAGER_PASSWORD}
+      - ${MYSQL_ACCESS_MANAGER_USER_FILE}
+      - ${MYSQL_ACCESS_MANAGER_PASSWORD_FILE}
       - ${MYSQL_CONTACTS_USER_FILE}
       - ${MYSQL_CONTACTS_PASSWORD_FILE}
-      - ${MYSQL_CORE_USER}
-      - ${MYSQL_CORE_PASSWORD}
+      - ${MYSQL_CORE_USER_FILE}
+      - ${MYSQL_CORE_PASSWORD_FILE}
     environment:
       MYSQL_ACCESS_MANAGER_HOST: mysql
       MYSQL_ACCESS_MANAGER_DATABASE: ${MYSQL_ACCESS_MANAGER_DATABASE}
-      MYSQL_ACCESS_MANAGER_USER: /run/secrets/${MYSQL_ACCESS_MANAGER_USER}
-      MYSQL_ACCESS_MANAGER_PASSWORD: /run/secrets/${MYSQL_ACCESS_MANAGER_PASSWORD}
+      MYSQL_ACCESS_MANAGER_USER: /run/secrets/${MYSQL_ACCESS_MANAGER_USER_FILE}
+      MYSQL_ACCESS_MANAGER_PASSWORD: /run/secrets/${MYSQL_ACCESS_MANAGER_PASSWORD_FILE}
       MYSQL_CONTACTS_HOST: mysql
       MYSQL_CONTACTS_DATABASE: ${MYSQL_CONTACTS_DATABASE}
       MYSQL_CONTACTS_USER: /run/secrets/${MYSQL_CONTACTS_USER_FILE}
       MYSQL_CONTACTS_PASSWORD: /run/secrets/${MYSQL_CONTACTS_PASSWORD_FILE}
       MYSQL_CORE_HOST: mysql
       MYSQL_CORE_DATABASE: ${MYSQL_CORE_DATABASE}
-      MYSQL_CORE_USER: /run/secrets/${MYSQL_CORE_USER}
-      MYSQL_CORE_PASSWORD: /run/secrets/${MYSQL_CORE_PASSWORD}
+      MYSQL_CORE_USER: /run/secrets/${MYSQL_CORE_USER_FILE}
+      MYSQL_CORE_PASSWORD: /run/secrets/${MYSQL_CORE_PASSWORD_FILE}
     stdin_open: true
     external_links:
     - ${DATABASE_HOST}:mysql
