bugfixed with the secret name

--- a/templates/access-manager/0/rancher-compose.yml
+++ b/templates/access-manager/0/rancher-compose.yml
@@ -133,7 +133,7 @@
       default: mysql_post_username
 
     -
-      variable: MYSQL_CORE_PASSWORD
+      variable: MYSQL_CORE_PASSWORD_FILE
       label: Database Password Secret
       description: Database Password Secret
       required: true
