--- a/templates/access-manager/config.yml
+++ b/templates/access-manager/config.yml
@@ -2,4 +2,5 @@ name: Access Manager API
 description: |
   Access Manager API
 version: 1.0-rancher
-category: POST
+category: API
+maintainer: Reborn Developers
