--- a/templates/file-repository/config.yml
+++ b/templates/file-repository/config.yml
@@ -2,4 +2,5 @@ name: File Repository API
 description: |
   File Repository API
 version: 1.0-rancher
-category: POST
+category: API
+maintainer: Reborn Developers
