--- a/templates/access-manager/0/rancher-compose.yml
+++ b/templates/access-manager/0/rancher-compose.yml
@@ -64,7 +64,7 @@
       description: Image
       required: true
       type: string
-      default: 912028902405.dkr.ecr.eu-west-1.amazonaws.com/pcc_mobility_api_access_manager_v2
+      default: gitlab.cc.zone:5001/pcc/api/access_manager
 
     - 
       variable: IMAGE_TAG
