--- a/templates/access-manager/config.yml
+++ b/templates/access-manager/config.yml
@@ -1,6 +1,8 @@
-name: Access Manager API
+name: Access manager
 description: |
-  Access Manager API
-version: 1.0-rancher
-category: API
-maintainer: Reborn Developers
+  # Description of the Catalog Entry
+version: # Version of the Catalog to be used
+category: # Category to be used for searching catalog entries
+maintainer: # The maintainer of the catalog entry
+license: # The license
+projectURL: # A URL related to the catalog entry
