--- a/templates/file-repository/config.yml
+++ b/templates/file-repository/config.yml
@@ -1,6 +1,8 @@
-name: File Repository API
+name: # Name of the Catalog Entry
 description: |
-  File Repository API
-version: 1.0-rancher
-category: API
-maintainer: Reborn Developers
+  # Description of the Catalog Entry
+version: # Version of the Catalog to be used
+category: # Category to be used for searching catalog entries
+maintainer: # The maintainer of the catalog entry
+license: # The license
+projectURL: # A URL related to the catalog entry
